# aclip

./: .gitignore  README  README.md  configure.ac
src/: Makefile.am  alsa.c  alsa.h  clip.c  clip.h  main.c  options.c  options.h  wavefile.c  wavefile.h
